<resources>
    <string name="app_name">Zachi Tip Calculator</string>

    <string name="action_settings">Settings</string>

    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.0</string>

    <string name="tip_text_view">Tip</string>
    <string name="tip_edit_text">.15</string>

    <string name="final_bill_text_view">Final Bill</string>
    <string name="final_bill_edit_text">.15</string>

    <string name="change_tip_text_view">Change Tip</string>
    <string name="intro_text_view">Introduction</string>
    <string name="intro_friendly_checkbox">Friendly</string>
    <string name="intro_specials_checkbox">Specials</string>
    <string name="intro_opinion_checkbox">Opinion</string>

    <string name="availability_text_view">Availability</string>
    <string name="availability_bad_radiobutton">Bad</string>
    <string name="availability_ok_radiobutton">OK</string>
    <string name="availability_good_radiobutton">Good</string>

    <string name="time_waiting_text_view">Time Waiting for Service</string>
    <string name="start_chronometer_button">Start</string>
    <string name="pause_chronometer_button">Pause</string>
    <string name="reset_chronometer_button">Reset</string>

    <string-array name="problem_solving">
        <item>Problem Solving</item>
        <item>Bad</item>
        <item>OK</item>
        <item>Good</item>
    </string-array>

</resources>
